--- a/src/android/res/layout/bytedanceunionad_activity_splash.xml
+++ b/src/android/res/layout/bytedanceunionad_activity_splash.xml
@@ -4,13 +4,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:background="#000000"
+              android:background="@android:color/transparent"
               tools:context="cordova.plugins.bytedanceunionad.SplashActivity">
 
     <FrameLayout android:id="@+id/splash_container"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 android:background="#000000"
+                 android:background="@android:color/transparent"
     >
     </FrameLayout>
 </LinearLayout>
