--- a/src/android/res/layout/bytedanceunionad_activity_splash.xml
+++ b/src/android/res/layout/bytedanceunionad_activity_splash.xml
@@ -7,7 +7,7 @@
               android:background="@android:color/transparent"
               tools:context="cordova.plugins.bytedanceunionad.SplashActivity">
 
-    <FrameLayout android:id="@+id/splash_container"
+    <FrameLayout android:id="@+id/bytedanceunionad_splash_container"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@android:color/transparent"
